--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,13 @@
-﻿* text=auto
+* text=auto
+
+# PowerShell-Skripte: CRLF im Working Tree (Repo speichert trotzdem LF)
 *.ps1  text eol=crlf
-*.bat  text eol=crlf
-*.cmd  text eol=crlf
-*.md   text eol=lf
+*.psm1 text eol=crlf
+*.psd1 text eol=crlf
+
+# Bin?r
+*.lnk -text
+
+# Typisch LF
 *.json text eol=lf
+*.md   text eol=lf
